--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <div class="carrier-preview carrier" draggable="true"></div>
   </div>
 
+  <button id="flip-button">FLIP</button>
+  <button id="start-button">START</button>
+
   
 </body>
 </html>
