--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+  <script src="app.js"></script>
 
   <div id="game-info">
     <p>Turn: <span id="turn-display"></span></p>
